@@ -73,7 +73,10 @@ size_t gsl_stats_char_max_index (const char data[], const size_t stride, const s
 size_t gsl_stats_char_min_index (const char data[], const size_t stride, const size_t n);
 void gsl_stats_char_minmax_index (size_t * min_index, size_t * max_index, const char data[], const size_t stride, const size_t n);
 
+char gsl_stats_char_select(char data[], const size_t stride, const size_t n, const size_t k);
+
 double gsl_stats_char_median_from_sorted_data (const char sorted_data[], const size_t stride, const size_t n) ;
+double gsl_stats_char_median (char sorted_data[], const size_t stride, const size_t n);
 double gsl_stats_char_quantile_from_sorted_data (const char sorted_data[], const size_t stride, const size_t n, const double f) ;
 
 char gsl_stats_char_Sn0_from_sorted_data (const char sorted_data[], const size_t stride, const size_t n, char work[]) ;
