@@ -93,7 +93,10 @@ size_t gsl_stats_max_index (const double data[], const size_t stride, const size
 size_t gsl_stats_min_index (const double data[], const size_t stride, const size_t n);
 void gsl_stats_minmax_index (size_t * min_index, size_t * max_index, const double data[], const size_t stride, const size_t n);
 
+double gsl_stats_select(double data[], const size_t stride, const size_t n, const size_t k);
+
 double gsl_stats_median_from_sorted_data (const double sorted_data[], const size_t stride, const size_t n) ;
+double gsl_stats_median (double sorted_data[], const size_t stride, const size_t n);
 double gsl_stats_quantile_from_sorted_data (const double sorted_data[], const size_t stride, const size_t n, const double f) ;
 
 double gsl_stats_Sn0_from_sorted_data (const double sorted_data[], const size_t stride, const size_t n, double work[]) ;
