@@ -73,7 +73,10 @@ size_t gsl_stats_uint_max_index (const unsigned int data[], const size_t stride,
 size_t gsl_stats_uint_min_index (const unsigned int data[], const size_t stride, const size_t n);
 void gsl_stats_uint_minmax_index (size_t * min_index, size_t * max_index, const unsigned int data[], const size_t stride, const size_t n);
 
+unsigned int gsl_stats_uint_select(unsigned int data[], const size_t stride, const size_t n, const size_t k);
+
 double gsl_stats_uint_median_from_sorted_data (const unsigned int sorted_data[], const size_t stride, const size_t n) ;
+double gsl_stats_uint_median (unsigned int sorted_data[], const size_t stride, const size_t n);
 double gsl_stats_uint_quantile_from_sorted_data (const unsigned int sorted_data[], const size_t stride, const size_t n, const double f) ;
 
 unsigned int gsl_stats_uint_Sn0_from_sorted_data (const unsigned int sorted_data[], const size_t stride, const size_t n, unsigned int work[]) ;
